# g4fx-fork

./: .gitignore  CMakeLists.txt  README.md  T002_Subtraction.gdml  T004_UnionN.gdml  T006_torus.mesh  T006_torus.msh  T006_torus.off  T006_torus.vtk  bsp_test.cc  load_gdml.cc  ray_march.cc  raymarch_test.cc  readme.md  tess_test.cc  tracking_test.cc  vol_mesh_test.cc
.circleci/: config.yml
.github/workflows/: build.yaml
docker/: g4v11.1.1-env  readme.md
include/: G4BooleanProcessorCGAL.hh  G4MeshLoader.hh  G4SignedDistanceField.hh  G4SurfaceMeshCGAL.hh  G4VSurfaceMesh.hh  G4VtkDICOMLoader.hh  G4VtkSurfaceMeshLoader.hh  G4VtkVolumeMeshLoader.hh  SDFDetectorConstruction.hh
include/binarySpacePartition/: G4BSPTreeNode.hh  G4TreeNode.hh
include/common/: common3d.hh
include/mesh/: G4TessellatedBHV.hh  G4TessellatedNew.hh
include/occCAD/: G4OCCExplorer.hh  G4OCCStepLoader.hh
include/signedDistance/: G4SignedDistanceField.hh
include/vtk/: G4VtkDICOMLoader.hh  G4VtkSurfaceMeshLoader.hh  G4VtkVolumeMeshLoader.hh  VtkPipeline.hh  VtkViewer.hh
src/: G01PrimaryGeneratorAction.cc  G4BSPTreeNode.cc  G4BooleanProcessorCGAL.cc  G4MeshLoader.cc  G4SignedDistanceField.cc  G4VtkDICOMLoader.cc  G4VtkSurfaceMeshLoader.cc  G4VtkVolumeMeshLoader.cc  testEmbree.cpp
src/geant4App/: G01ActionInitialization.cc  G01PrimaryGeneratorAction.cc
src/mesh/: G4SurfaceMeshCGAL.cc  G4TessellatedBVH.cc  G4TessellatedNew.cc  G4VSurfaceMesh.cc
src/occCAD/: G4OCCExplorer.cc  G4OCCStepLoader.cc
src/signedDistance/: SDFDetectorConstruction.cc
src/test/: dicom_test.cc  load_gdml.cc  load_step.cc  testOCCCAD.cc  tracking_test.cc  viewer.cc  vol_mesh_test.cc
src/vtk/: G4VtkDICOMLoader.cc  G4VtkSurfaceMeshLoader.cc  G4VtkVolumeMeshLoader.cc  VtkPipeline.cc  VtkViewer.cc
testfiles/: 03_Cube_with_fillet.step  T001_Union.gdml  T003_Intersection.gdml  T006_torus.geo  T006_torus.stl
